--- a/app/src/main/res/layout/main_activity_layout.xml
+++ b/app/src/main/res/layout/main_activity_layout.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--LinearLayout 线性布局-->
+<!--
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
-<!--android:orientation:vertical,在线性布局中，vertical垂直排列，horizontal水平排列-->
-   <!-- <Button
+&lt;!&ndash;android:orientation:vertical,在线性布局中，vertical垂直排列，horizontal水平排列&ndash;&gt;
+   &lt;!&ndash; <Button
         android:id="@+id/button_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -23,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="button_3"
-        android:textAllCaps="false"/>-->
+        android:textAllCaps="false"/>&ndash;&gt;
         <EditText android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:layout_weight="1"/>
@@ -32,4 +34,113 @@
         android:text="button1"/>
 
 
-</LinearLayout>
+</LinearLayout>-->
+<!--RelativeLayout 相对布局
+android:layout_alignParentXXX相对于父布局的定位
+android:layout_above 相对于某个控件之上，用id来引用
+android:layout_below 相对于某个控件之下
+android:layout_right 相对于某控件之右
+android:layout_left 相对于某控件之左
+-->
+<!--
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+&lt;!&ndash;    <Button
+        android:id="@+id/button_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="button 1"
+        android:layout_above="@id/button_3"
+        android:layout_toLeftOf="@id/button_3"/>
+    <Button
+        android:id="@+id/button_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="button 2"
+        android:layout_above="@id/button_3"
+        android:layout_toRightOf="@id/button_3"/>
+
+    <Button
+        android:id="@+id/button_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="button 3"
+        android:layout_centerInParent="true"
+        />
+    <Button
+        android:id="@+id/button_4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="button 4"
+        android:layout_below="@id/button_3"
+        android:layout_toLeftOf="@id/button_3"
+
+        />
+    <Button
+        android:id="@+id/button_5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="button 5"
+        android:layout_below="@id/button_3"
+        android:layout_toRightOf="@id/button_3"
+        />&ndash;&gt;
+    <Button
+        android:id="@+id/button_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="button 1"
+        android:layout_toLeftOf="@id/button_3"
+        android:layout_alignBottom="@id/button_3"
+        />
+    <Button
+        android:id="@+id/button_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="button 2"
+        android:layout_alignBottom="@id/button_3"
+        android:layout_toRightOf="@id/button_3"
+       />
+
+    <Button
+        android:id="@+id/button_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="button 3"
+        android:layout_centerInParent="true"
+        />
+    <Button
+        android:id="@+id/button_4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="button 4"
+        android:layout_below="@id/button_3"
+        android:layout_toLeftOf="@id/button_3"
+
+        />
+    <Button
+        android:id="@+id/button_5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="button 5"
+        android:layout_below="@id/button_3"
+        android:layout_toRightOf="@id/button_3"
+        />
+
+</RelativeLayout>-->
+    <!--FrameLayout 帧布局-->
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="this is a text"
+        android:layout_gravity="left"/>
+    <ImageView android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/ic_launcher"
+        android:layout_gravity="right"/>
+
+</FrameLayout>
